ERemindersWidget: Reverse order of the shown reminders
Summary:
In evolution-alarm-notify, a pop-up appears for event reminders but doesn't show the upcoming event
Environment:
Ubuntu 21.04, Gnome 3.38.5
Observed behavior
When I get an event reminder pop-up via evolution-alarm-notify and haven't dismissed various earlier events, I don't see the most timely event reminder first. Additionally, the user may need to scroll to see the event happening soonest if they haven't dismissed earlier events. See screenshot as an example:
Expected behavior
Notify pop-up is arranged in reverse chronological order so the event reminder associated with why the window popped-up is selected and shown first.
Edited by Milan Crha