I#349 - ERemindersWidget: Reverse order of the shown reminders

Closes https://gitlab.gnome.org/GNOME/evolution-data-server/-/issues/349